--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@
 header {
     background-color: #2c3e50;
     padding: 15px;
-    text-align: left;
-
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 button {
     background: none;
@@ -24,4 +25,30 @@ button {
 }
 button:hover {
     color: #ffe600;
+}
+
+.fa-brands, .fa-github {
+    font-size: 1.4rem;
+    vertical-align: middle; 
+    margin-right: 8px;
+    color: #0d1117;
+}
+
+a:hover .fa-github {
+    color: #ffe600;
+}
+
+/* Header contact styles */
+.site-header .contact {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.site-header .contact .fa-brands {
+    color: #ffffff;
+    font-size: 1.5rem;
+}
+.site-header .contact-text {
+    color: #ffffff;
+    font-size: 1.0rem;
 }
