--- a/style.css
+++ b/style.css
@@ -27,18 +27,27 @@ button:hover {
     color: #ffe600;
 }
 
-.fa-brands, .fa-github {
-    font-size: 1.4rem;
+a {
+    font-size: 5.0rem;
+}
+
+.fa-brands, .fa-github, .fa-x-twitter {
+    font-size: 1.8rem;
+    margin-right: 12px;
+}
+.fa-brands, .fa-github, .fa-x-twitter {
+    font-size: 10.0rem;
     vertical-align: middle; 
     margin-right: 8px;
     color: #0d1117;
 }
 
-a:hover .fa-github {
+a:hover .fa-github,
+a:hover .fa-x-twitter {
     color: #ffe600;
 }
 
-/* Header contact styles */
+
 .site-header .contact {
     display: flex;
     align-items: center;
@@ -51,7 +60,4 @@ a:hover .fa-github {
 .site-header .contact-text {
     color: #ffffff;
     font-size: 1.0rem;
-}
-body {
-    margin: 0 ;
 }
