--- a/style.css
+++ b/style.css
@@ -1,15 +1,11 @@
-.page {
-    display: none;
-    padding: 50px 50px;
-    
+body {
+    font-size: 20px; 
+    line-height: 1.2;
+    background-color: #a2f4ffde;
+    margin: 0 !important;
 }
-
-.page.active {
-    display: block;
-}
-
 header {
-    background-color: #2c3e50;
+    background-color: #00488f;
     padding: 15px;
     display: flex;
     justify-content: space-between;
@@ -28,9 +24,22 @@ button:hover {
 }
 
 a {
-    font-size: 5.0rem;
+    font-size: 2.0rem;
 }
 
+a:hover .fa-github,
+a:hover .fa-x-twitter {
+    color: #48f6fc;
+}
+h1 {
+    color: #00f7ff;
+}
+h2 {
+    color: #ffffff;
+}
+ul {
+    color: #ffffff;
+}
 .fa-brands, .fa-github, .fa-x-twitter {
     font-size: 1.8rem;
     margin-right: 12px;
@@ -42,12 +51,6 @@ a {
     color: #0d1117;
 }
 
-a:hover .fa-github,
-a:hover .fa-x-twitter {
-    color: #ffe600;
-}
-
-
 .site-header .contact {
     display: flex;
     align-items: center;
@@ -57,7 +60,20 @@ a:hover .fa-x-twitter {
     color: #ffffff;
     font-size: 1.5rem;
 }
-.site-header .contact-text {
+.contact-text {
     color: #ffffff;
     font-size: 1.0rem;
+}
+.page {
+    display: none;
+    padding: 50px 50px;
+    border: 2px solid #2c3e50;
+    background-color: #00488f;
+    border-radius: 10px;
+    max-width: 475px;
+    margin: 40px auto;
+}
+
+.page.active {
+    display: block;
 }
