--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ ul {
     font-size: 10.0rem;
     vertical-align: middle; 
     margin-right: 8px;
-    color: #fafafa;
+    color: #ffffff;
 }
 
 .site-header .contact {
@@ -65,13 +65,24 @@ ul {
 .page {
     display: none;
     padding: 50px 50px;
-    border: 2px solid #2c3e50;
+    border: 2px solid #000000;
     background-color: #00488f;
     border-radius: 10px;
     max-width: 500px;
     margin: 40px auto;
+    position: relative;
 }
 
 .page.active {
     display: block;
+}
+.profile-outer-photo {
+    position: absolute;
+    left: -200px;        
+    top: 50px; 
+    width: 160px;
+    height: 160px;
+    border: 2px solid #000000;
+    border-radius: 10px;
+    object-fit: cover;
 }
